# lfp-tools

./: .gitignore  pyproject.toml  setup.py
lfp_analysis/: __init__.py  _manual_data.py  data.py  data_gen.py  dataloader.py  feature_extractor.py  report.py  score.py  setup.py  svm.py  trainer.py  trainer_pl.py  windower.py
lfp_analysis/arch/: EffNet.py  __init__.py  base.py  dense.py  dense_pl.py  lstm.py  resnet1d.py  sinc.py
lfp_analysis/lfp_analysis.egg-info/: PKG-INFO  SOURCES.txt
