[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfp-tools"
version = "0.1.0"
description = "Manipulate and analyze LFP data"
authors = [
  { name = "Fernando Rodriguez", email = "ferrodplazas@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
